# lighter-rs

./: Cargo.toml  LICENSE  README.md
benches/: crypto_bench.rs  goldilocks_bench.rs
scripts/: generate_fp5_vectors.go
src/: batch.rs  lib.rs
src/curve/: affine.rs  mod.rs  point.rs  scalar.rs  weierstrass.rs
src/field/: goldilocks.rs  goldilocks_avx2.rs  goldilocks_avx512.rs  mod.rs  quintic.rs  quintic_avx.rs
src/hash/: poseidon2.rs
src/signature/: mod.rs  schnorr.rs
src/signer/: key_manager.rs  mod.rs
src/types/: approve_integrator.rs  attributes.rs  burn_shares.rs  cancel_all_orders.rs  cancel_order.rs  change_pub_key.rs  constants.rs  create_grouped_orders.rs  create_order.rs  create_public_pool.rs  create_sub_account.rs  errors.rs  interface.rs  mint_shares.rs  mod.rs  modify_order.rs  stake_assets.rs  transfer.rs  unstake_assets.rs  update_leverage.rs  update_margin.rs  update_public_pool.rs  withdraw.rs
src/x86/: cpuid.rs  mod.rs
tests/: curve_go_vectors.json  curve_vectors.rs  fp5_go_vectors.json  fp5_vectors.rs  poseidon2_go_vectors.json  poseidon2_vectors.rs  schnorr_go_vectors.json  schnorr_vectors.rs
