[package]
name = "lighter-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust signer for the Lighter DEX protocol (Poseidon2 + Schnorr over ECgFP5)"
license = "MIT OR Apache-2.0"
authors = ["yeule0"]
autobins = false

[features]
default = []
no-simd = []

[dependencies]
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rayon = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "benchmark_signing"
path = "src/bin/benchmark_signing.rs"

[[bin]]
name = "cross_validate"
path = "src/bin/cross_validate.rs"

[[bin]]
name = "create_order"
path = "src/bin/create_order.rs"

[[bin]]
name = "cancel_order"
path = "src/bin/cancel_order.rs"

[[bin]]
name = "batch_orders"
path = "src/bin/batch_orders.rs"

[[bench]]
name = "goldilocks_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false


